# bigraph-loom

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
bigraph_loom/: __init__.py  api.py  convert.py  examples.py  jupyter.py  server.py  session.py
docs/: cell_environment.pbg  ecoli_wcm.pbg
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  layout.ts
frontend/src/nodes/: GroupNode.tsx  ProcessNode.tsx  StoreNode.tsx
frontend/src/panels/: AddPanel.tsx  EditPanel.tsx  InspectorPanel.tsx  JsonPanel.tsx  LibraryPanel.tsx  ProcessListPanel.tsx
tests/: test_api.py  test_convert.py
